# junction

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: AddSample.cmake  JunctionProjectDefs.cmake  junction_config.h.in
cmake/modules/: FindCDS.cmake  FindFolly.cmake  FindLibCuckoo.cmake  FindNBDS.cmake  FindTBB.cmake  FindTervel.cmake  FindTurf.cmake
junction/: Averager.cpp  Averager.h  ConcurrentMap_Crude.h  ConcurrentMap_Grampa.cpp  ConcurrentMap_Grampa.h  ConcurrentMap_LeapFrog.cpp  ConcurrentMap_LeapFrog.h  ConcurrentMap_Leapfrog.cpp  ConcurrentMap_Leapfrog.h  ConcurrentMap_Linear.cpp  ConcurrentMap_Linear.h  ConcurrentMap_SimpleRelaxed.h  Core.h  MapTraits.h  QSBR.cpp  QSBR.h  SimpleJobCoordinator.h  SingleMap_Leapfrog.h  SingleMap_Linear.h
junction/details/: Grampa.cpp  Grampa.h  LeapFrog.cpp  LeapFrog.h  Leapfrog.cpp  Leapfrog.h  Linear.cpp  Linear.h
junction/extra/: MapAdapter.h  MemHook_NBDS.cpp  MemHook_TBB.cpp
junction/extra/impl/: MapAdapter_CDS_Cuckoo.h  MapAdapter_CDS_Michael.h  MapAdapter_Crude.h  MapAdapter_Folly.h  MapAdapter_Grampa.h  MapAdapter_LeapFrog.h  MapAdapter_Leapfrog.h  MapAdapter_Leapfrog_RWLock.h  MapAdapter_LibCuckoo.h  MapAdapter_Linear.h  MapAdapter_Linear_Mutex.h  MapAdapter_Linear_RWLock.h  MapAdapter_NBDS.h  MapAdapter_Null.h  MapAdapter_SimpleRelaxed.h  MapAdapter_StdMap.h  MapAdapter_TBB.h  MapAdapter_Tervel.h
junction/striped/: AutoResetEvent.h  ConditionBank.cpp  ConditionBank.h  ConditionPair.h  ManualResetEvent.h  Mutex.h
samples/: AddSample.cmake
samples/MallocTest/: MallocTest.cpp
samples/MapCorrectnessTests/: CMakeLists.txt  MapCorrectnessTests.cpp  TestChurn.h  TestDoubleAssign.h  TestEnvironment.h  TestInsertDifferentKeys.h  TestInsertSameKeys.h  junction_userconfig.h.in
samples/MapLinearizabilityTest/: CMakeLists.txt  MapLinearizabilityTest.cpp  junction_userconfig.h.in
samples/MapMemoryBench/: MapMemoryBench.cpp  RenderGraphs.py  TestAllMaps.py
samples/MapPerformanceTests/: MapPerformanceTests.cpp  RenderGraphs.py  TestAllMaps.py
samples/MapScalabilityTests/: CMakeLists.txt  MapScalabilityTests.cpp  RenderGraphs.py  TestAllMaps.py
